--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="copyrigth" content="Martinho Macovere Domingos">
+    <meta name="author" content="Martinho Macovere Domingos, domingosmartinho67@gmail.com">
     <title>Portifolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/estilos/index.css">
@@ -24,7 +26,7 @@
 
                                 </div>
                                 <span>
-                                    Aly Olaia
+                                    Aly Olaia Teste
                                 </span>
                             </a>
                         </div>
