--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                                 </div>
                                 <span>
-                                    Aly Olaia Teste
+                                    Aly Olaia
                                 </span>
                             </a>
                         </div>
