--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/estilos/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+    <link rel="stylesheet" href="./assets/estilos/responsividade.css">
 </head>
 <body>
     <div class="limitadorMother">
@@ -19,7 +19,13 @@
             </div>
             <header class="menuFixo cmoHeader">
                 <nav>
+                    
                     <div class="logoMenu">
+                        <div class="humburguer">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
                         <div class="logo">
                             <a href="#">
                                 <div class="perfil" style="background-image: url(./assets/img/Perfil/p.png);">
@@ -99,7 +105,7 @@
                 <div class="textoApresentacao">
                     <h2>
                        <span>Olá,</span> 
-                       <span>Sou <strong>Aly Olaia</strong>,</span>
+                       <span>Sou <strong>Aly Olaia</strong></span>
                        
                     </h2>
                     <div class="oqueSou">
@@ -697,7 +703,7 @@
                 </div>
                 <div class="assinatura">
                     <span>por -</span>
-                    <a href="#">
+                    <a href="https://martinho-portifolio.vercel.app/" target="_blank">
                         34sea
                     </a>
                 </div>
