--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 </span>
                             </a>
                         </div>
-                        <div class="menuNav">
+                        <div class="menuNav menuFix">
                             <ul class="menuPortifolio">
                                 <div class="tirar">
                                     X
